--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,11 @@
     </properties>
 
     <dependencies>
+    <dependency>
+	<groupId>org.thymeleaf</groupId>
+	<artifactId>thymeleaf-spring4</artifactId>
+	<version>2.1.4.RELEASE</version>
+</dependency>
 
         <!-- Spring 3 dependencies -->
         <dependency>
