--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,14 @@
 	<version>2.1.4.RELEASE</version>
 </dependency>
 
+<dependency>
+	<groupId>org.thymeleaf.extras</groupId>
+	<artifactId>thymeleaf-extras-springsecurity4</artifactId>
+	<version>2.1.2.RELEASE</version>
+</dependency>
+
+
+
         <!-- Spring 3 dependencies -->
         <dependency>
             <groupId>org.springframework</groupId>
