--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,11 @@
 	<version>2.1.2.RELEASE</version>
 </dependency>
 
-
+<dependency>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-databind</artifactId>
+    <version>2.7.0</version>
+</dependency>
 
         <!-- Spring 3 dependencies -->
         <dependency>
