--- a/pom.xml
+++ b/pom.xml
@@ -125,7 +125,12 @@
     		<artifactId>hibernate-validator</artifactId>
     		<version>5.3.0.Alpha1</version>
 </dependency>
-
+<!-- Jackson -->
+		<dependency>
+			<groupId>org.codehaus.jackson</groupId>
+			<artifactId>jackson-mapper-asl</artifactId>
+			<version>1.9.10</version>
+		</dependency>
 
 <dependency>
 			<groupId>org.slf4j</groupId>
